--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -2,14 +2,14 @@
 
 <ProjectCard
   title="Bedwars Nerds Discord"
-  link="http://discord.bwnerds.com?utm_source=cara&utm_medium=Theme"
+  link="http://discord.bwnerds.com"
   bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
 >
   A Bedwars Community Discord for high-level players to chat and find parties.
 </ProjectCard>
 <ProjectCard
   title="Cubelify Overlay"
-  link="https://cubelify.com?utm_source=cara&utm_medium=Theme"
+  link="https://cubelify.com"
   bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
 >
   An aesthetic Bedwars stats overlay developed by Metriusz, with assistance from xGe_.
