--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -16,14 +16,14 @@
 </ProjectCard>
 <ProjectCard
   title="Bedwars Nerds Antisniper Plugin (PRIVATE)"
-  link="https://home.bwnerds.com"
+  link="https://www.bwnerds.com"
   bg="linear-gradient(to right, #009245 0%, #FCEE21 100%)"
 >
   An accurate sniper detector based on queue data and player stats created by xGe_.
 </ProjectCard>
 <ProjectCard
   title="Bedwars Nerds API (COMING SOON)"
-  link="https://home.bwnerds.com"
+  link="https://www.bwnerds.com"
   bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
 >
   The API that runs the whole Bedwars Nerds project, in Typescript.
